# gbln-cpp

./: .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: gbln-config.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp  error_handling.cpp
include/gbln/: config.hpp  exceptions.hpp  gbln.hpp  io.hpp  parser.hpp  serialiser.hpp  value.hpp
include/gbln/detail/: conversion.hpp  ffi.hpp  managed_value.hpp
src/: conversion.cpp  io.cpp  parser.cpp  serialiser.cpp
